--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,26 @@
 name: python_shell
 description: Python Environment Manager and Executor for dart and flutter
 version: 0.0.1
-# homepage: https://www.example.com
+repository: https://github.com/eseunghwan/python_shell.dart
+issue_tracker: https://github.com/eseunghwan/python_shell.dart/issues
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
+  flutter: ">=2.10.0"
 
 # dependencies:
 #   path: ^1.8.0
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   lints: ^2.0.0
   test: ^1.16.0
 dependencies:
+  flutter:
+    sdk: flutter
+
   archive: ^3.3.1
   dio: ^4.0.6
   intl: ^0.17.0
+  path: ^1.8.2
